Update Case Hazard case study page and assets

--- a/case-hazard.html
+++ b/case-hazard.html
@@ -161,7 +161,7 @@
         <article class="doc-section">
             <div class="doc-container">
 
-                <a href="portfolio.html" class="back-link">â† Back to Work</a>
+                <a href="portfolio.html" class="back-link">← Back to Work</a>
 
                 <header class="doc-header">
                     <h1>Hazard Recognition & Risk Mitigation</h1>
@@ -182,82 +182,169 @@
                 </header>
 
                 <div class="doc-image">
-                    <img src="./assets/projects/project1_hazard/images/project_hazard_overview.png"
+                    <img src="./assets/projects/project1_hazard/images/case hazard 1.png"
                         alt="Hazard Recognition Module Overview" class="zoomable-image" onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=Hazard+Recognition'">
                 </div>
 
                 <div class="doc-content">
                     <h2>Project Overview</h2>
-                    <p>
-                        Designed and developed a comprehensive eLearning course to empower employees with the knowledge
-                        and skills to proactively identify, assess, and control workplace hazards. The course translates
-                        complex occupational health and safety legislation into practical, actionable steps, fostering a
-                        proactive safety culture and reducing the risk of workplace incidents.
-                    </p>
+                    <p>I designed and developed a performance-driven safety learning solution that enabled employees to proactively identify, assess, and control workplace hazards. The goal was to move beyond compliance-focused training and build practical decision-making capability that could be applied in dynamic work environments.</p>
+                    <p>The program translated complex occupational health and safety legislation into a simplified, actionable framework that frontline employees could use in real time. The solution focused on reducing injuries, improving operational efficiency, and creating a shared language around risk and prevention.</p>
 
-                    <h2>Problem / Need</h2>
-                    <p>
-                        The organization needed to standardize safety training across all provinces, ensuring compliance
-                        with varying legislative requirements. There was a critical need to move beyond a
-                        "compliance-checkbox" mentality to an engaged, practical understanding of hazard management,
-                        specifically addressing high rates of strains and sprains.
-                    </p>
-
-                    <h2>Business Goals</h2>
+                    <h2>Business Challenge</h2>
+                    <p>The organization needed to standardize safety training across multiple provinces while ensuring alignment with varying legislative requirements. Existing training was compliance-focused, knowledge-heavy, and lacked real-world application. As a result:</p>
                     <ul>
-                        <li>Achieve 100% compliance with provincial OH&S training mandates.</li>
-                        <li>Reduce reportable workplace incidents and near-misses by 15% within one year.</li>
-                        <li>Decrease lost-time injury rates, particularly those related to musculoskeletal disorders.
-                        </li>
-                        <li>Standardize the hazard assessment process across all job sites.</li>
+                        <li>Hazard reporting and risk assessment practices were inconsistent</li>
+                        <li>Employees struggled to prioritize risk in complex situations</li>
+                        <li>Musculoskeletal injuries such as strains and sprains remained high</li>
+                        <li>Managers spent significant time reinforcing safety procedures</li>
+                        <li>The organization wanted to shift from reactive incident response to proactive prevention</li>
                     </ul>
+                    <p>The solution needed to support both compliance and capability while driving measurable behavior change.</p>
 
-                    <h2>Methodology & Strategy</h2>
-                    <p>
-                        Applied an Agile approach with iterative storyboard development, allowing for rapid prototyping.
-                        I mapped the existing, informal hazard identification process against a new, standardized 3-step
-                        process (Identify, Assess, Control).
-                    </p>
-                    <p>
-                        The biggest challenge was making the risk assessment matrix practical rather than overly
-                        academic. I resolved this by building progressive interactive examples where learners assign
-                        risk values to real-world hazards (like a noisy air compressor or moving heavy furniture) and
-                        watch the risk score calculate in real time.
-                    </p>
-
-                    <h2>Outcomes & Impact</h2>
-                    <ul>
-                        <li><strong>Performance:</strong> Post-course assessment scores averaged 94%, significantly
-                            exceeding the 80% pass threshold.</li>
-                        <li><strong>Behavior Change:</strong> Practical application of Field Level Hazard Assessments
-                            (FLHAs) increased by 40% in the first quarter post-launch.</li>
-                        <li><strong>Efficiency:</strong> Standardized the training process, saving managers an estimated
-                            10 hours per month.</li>
-                    </ul>
-
-                    <p>
-                        <em>"This course has given us a common language and framework for discussing safety. We're now
-                            having more proactive conversations about risk instead of reactive ones about blame."</em> â€”
-                        Safety Department Lead
-                    </p>
-
-                    <h2>Leadership Feedback</h2>
-                    <div class="subtle-testimonial">
-                        <p class="testimonial-quote">The shift in self-awareness, openness to feedback, and commitment
-                            to continuous learning has translated directly into stronger performance and greater
-                            influence within the team.</p>
-                        <div class="testimonial-author">
-                            <div class="author-avatar">
-                                <img src="https://placehold.co/100x100/EBE6DC/737780?text=SF"
-                                    alt="Sheryl Smith Frobisher">
-                            </div>
-                            <div class="author-info">
-                                <h4>Sheryl Smith Frobisher</h4>
-                                <p>Director, People Development</p>
-                            </div>
-                        </div>
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 2.png" alt="Strategic Goals" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
+
+                    <h2>Strategic Goals</h2>
+                    <p>The project was aligned with measurable business and operational outcomes:</p>
+                    <ul>
+                        <li>Achieve 100% compliance with provincial OH&S training requirements</li>
+                        <li>Reduce reportable incidents and near-misses by 15% within one year</li>
+                        <li>Decrease lost-time injuries related to musculoskeletal risk</li>
+                        <li>Standardize hazard identification and assessment across all job sites</li>
+                        <li>Increase frontline ownership of safety decisions</li>
+                    </ul>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 3.png" alt="Learning Architecture" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+
+                    <h2>Learning Architecture</h2>
+                    <p>The course followed a structured performance pathway designed to mirror how employees encounter risk in real work environments:</p>
+                    <ul>
+                        <li>Safety mindset and beliefs</li>
+                        <li>Hazard awareness and classification</li>
+                        <li>Legal and organizational expectations</li>
+                        <li>Hazard identification techniques</li>
+                        <li>Risk assessment and prioritization</li>
+                        <li>Control strategy selection</li>
+                        <li>Real-world application through Field-Level Hazard Assessments</li>
+                        <li>Performance-based evaluation</li>
+                    </ul>
+                    <p>The course began by addressing safety beliefs and attitudes, recognizing that mindset strongly influences hazard recognition and decision-making. This supported a shift from blame-focused safety to systems thinking and proactive risk management.</p>
+
+                    <h2>Instructional Design Approach</h2>
+                    
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 4.png" alt="Scenario-First Design" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Scenario-First Design</h3>
+                    <p>Rather than focusing on information delivery, the course emphasized decision-making and real-world application. Learners practiced identifying and evaluating hazards in realistic workplace scenarios such as:</p>
+                    <ul>
+                        <li>Chemical exposure during furniture finishing</li>
+                        <li>Machine and equipment hazards</li>
+                        <li>Manual handling and musculoskeletal risk</li>
+                        <li>Delivery and field work environments</li>
+                        <li>Changing worksite conditions</li>
+                    </ul>
+                    <p>This approach built confidence and transfer of learning to the job.</p>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 5.png" alt="Progressive Complexity" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Progressive Complexity</h3>
+                    <p>The learning experience moved from guided examples to independent application. Early activities focused on awareness and classification, while later modules required learners to independently assess risk and select control strategies.</p>
+                    <p>This scaffolded design improved retention and reduced cognitive overload.</p>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 6.png" alt="Interactive Discovery" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Interactive Discovery</h3>
+                    <p>The course incorporated interactive exploration to increase engagement and reflection:</p>
+                    <ul>
+                        <li>Flip-card activities for hazard recognition</li>
+                        <li>Interactive tabs for legislation and control strategies</li>
+                        <li>Drag-and-drop classification</li>
+                        <li>Guided risk ranking</li>
+                        <li>Embedded knowledge checks</li>
+                    </ul>
+                    <p>These interactions promoted active learning rather than passive consumption.</p>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 7.png" alt="Simulation & Decision Practice" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Simulation & Decision Practice</h3>
+                    <p>One of the most critical design elements was an interactive risk assessment experience. Learners evaluated hazards by assigning values for:</p>
+                    <ul>
+                        <li>Probability of occurrence</li>
+                        <li>Severity of consequences</li>
+                        <li>Frequency of exposure</li>
+                    </ul>
+                    <p>They then observed how these factors influenced overall risk priority. This transformed a theoretical risk matrix into a practical decision tool that aligned directly with real workplace assessments.</p>
+                    <p>The simulation reduced subjectivity in decision-making and reinforced consistent risk evaluation across job sites.</p>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 8.png" alt="Behavioral & Cultural Design" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Behavioral & Cultural Design</h3>
+                    <p>The course emphasized that incident prevention is influenced by both individual behavior and organizational systems. By addressing underlying beliefs, the program supported a culture shift from reactive safety and blame toward proactive risk awareness and shared responsibility.</p>
+                    <p>Learners explored how personal experience, perception of risk, and workplace culture influence decision-making. This helped build stronger psychological ownership of safety.</p>
+
+                    <h3>Performance Transfer & Real-World Application</h3>
+                    <p>A key focus was ensuring that learning transferred beyond course completion. The program introduced both:</p>
+                    <ul>
+                        <li>Formal hazard assessment processes</li>
+                        <li>Field-Level Hazard Assessments (FLHAs)</li>
+                    </ul>
+                    <p>Learners practiced identifying new and changing hazards in dynamic work environments. This supported ongoing safety awareness and adaptability in field and delivery contexts.</p>
+                    <p>The FLHA framework provided employees with a structured, repeatable decision process that could be used daily.</p>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 9.png" alt="Assessment Strategy" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h3>Assessment Strategy</h3>
+                    <p>The assessment approach focused on performance rather than memorization. Instead of traditional quizzes alone, learners were required to:</p>
+                    <ul>
+                        <li>Identify hazards in real-world scenarios</li>
+                        <li>Prioritize risks based on severity and exposure</li>
+                        <li>Select appropriate control strategies</li>
+                        <li>Apply the hierarchy of controls</li>
+                        <li>Demonstrate decision-making capability</li>
+                    </ul>
+                    <p>This aligned evaluation with actual job tasks.</p>
+
+                    <h3>Tools & Technology</h3>
+                    <ul>
+                        <li>Articulate Storyline</li>
+                        <li>Scenario-based learning design</li>
+                        <li>Interactive simulations</li>
+                        <li>Agile development methodology</li>
+                        <li>Mobile-friendly and accessible design</li>
+                    </ul>
+
+                    <div class="doc-image">
+                        <img src="./assets/projects/project1_hazard/images/case hazard 10.png" alt="Results" class="zoomable-image" onclick="openLightbox(this.src)">
+                    </div>
+                    <h2>Results & Business Impact</h2>
+                    <p><strong>Performance:</strong> Post-course assessment scores averaged 94%, significantly exceeding the 80% pass threshold.</p>
+                    <p><strong>Behavior Change:</strong> Field-Level Hazard Assessments increased by 40% in the first quarter, demonstrating strong transfer of learning.</p>
+                    <p><strong>Operational Efficiency:</strong> Standardization reduced coaching and rework, saving managers approximately 10 hours per month.</p>
+                    <p><strong>Cultural Impact:</strong> The program created a shared framework and language for discussing safety and risk, improving collaboration between frontline teams and leadership.</p>
+
+                    <h2>Stakeholder Feedback</h2>
+                    <p><em>“This course has given us a common language and framework for discussing safety. We’re now having more proactive conversations about risk instead of reactive ones about blame.”</em><br>— Safety Department Lead</p>
+
+                    <h2>Reflection & Next Steps</h2>
+                    <p>This project reinforced my belief that effective safety learning must move beyond compliance and focus on real-world decision-making. When learners repeatedly practice applying frameworks in realistic environments, measurable behavior change becomes possible.</p>
+                    <p>Future enhancements could include:</p>
+                    <ul>
+                        <li>Adaptive learning pathways based on role</li>
+                        <li>AI-driven safety simulations</li>
+                        <li>Integration with real incident data</li>
+                        <li>Predictive risk analytics</li>
+                    </ul>
 
                 </div>
             </div>
