Optimize image loading performance

--- a/case-hazard.html
+++ b/case-hazard.html
@@ -214,7 +214,8 @@
 
                 <div class="doc-image">
                     <img src="./assets/projects/project1_hazard/images/301dc123-06.png"
-                        alt="Hazard Recognition Module Overview" class="zoomable-image" onclick="openLightbox(this.src)"
+                        alt="Hazard Recognition Module Overview" fetchpriority="high" decoding="async"
+                        class="zoomable-image" onclick="openLightbox(this.src)"
                         onerror="this.src='https://placehold.co/800x450/EBE6DC/737780?text=Hazard+Recognition'">
                 </div>
 
@@ -246,7 +247,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-07.png" alt="Strategic Goals"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
 
                     <h2>Strategic Goals</h2>
@@ -261,7 +262,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-08.png" alt="Learning Architecture"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
 
                     <h2>Learning Architecture</h2>
@@ -285,7 +286,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-11.png" alt="Scenario-First Design"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
                     <h3>Scenario-First Design</h3>
                     <p>Rather than focusing on information delivery, the course emphasized decision-making and
@@ -302,7 +303,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-17.png" alt="Progressive Complexity"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
                     <h3>Progressive Complexity</h3>
                     <p>The learning experience moved from guided examples to independent application. Early activities
@@ -312,7 +313,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-18.png" alt="Interactive Discovery"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
                     <h3>Interactive Discovery</h3>
                     <p>The course incorporated interactive exploration to increase engagement and reflection:</p>
@@ -327,7 +328,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-19.png"
-                            alt="Simulation & Decision Practice" class="zoomable-image"
+                            alt="Simulation & Decision Practice" loading="lazy" decoding="async" class="zoomable-image"
                             onclick="openLightbox(this.src)">
                     </div>
                     <h3>Simulation & Decision Practice</h3>
@@ -346,7 +347,8 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-22.png"
-                            alt="Behavioral & Cultural Design" class="zoomable-image" onclick="openLightbox(this.src)">
+                            alt="Behavioral & Cultural Design" loading="lazy" decoding="async" class="zoomable-image"
+                            onclick="openLightbox(this.src)">
                     </div>
                     <h3>Behavioral & Cultural Design</h3>
                     <p>The course emphasized that incident prevention is influenced by both individual behavior and
@@ -369,7 +371,7 @@
 
                     <div class="doc-image">
                         <img src="./assets/projects/project1_hazard/images/301dc123-24.png" alt="Assessment Strategy"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                            loading="lazy" decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
                     <h3>Assessment Strategy</h3>
                     <p>The assessment approach focused on performance rather than memorization. Instead of traditional
@@ -393,8 +395,8 @@
                     </ul>
 
                     <div class="doc-image">
-                        <img src="./assets/projects/project1_hazard/images/301dc123-27.png" alt="Results"
-                            class="zoomable-image" onclick="openLightbox(this.src)">
+                        <img src="./assets/projects/project1_hazard/images/301dc123-27.png" alt="Results" loading="lazy"
+                            decoding="async" class="zoomable-image" onclick="openLightbox(this.src)">
                     </div>
                     <h2>Results & Business Impact</h2>
                     <p><strong>Performance:</strong> Post-course assessment scores averaged 94%, significantly exceeding
